<resources>
    <string name="app_name">Ficha SS</string>
    <string name="action_settings">Settings</string>
    <string name="shift_morning">Manhã</string>
    <string name="shift_afternoon">Tarde</string>
    <string name="label_shift">Turno:</string>
    <string name="label_classroom">Turma:</string>
    <string name="name">Nome</string>
    <string name="birth_certificate">Certidão de Nascimento</string>
    <string name="name_father">Nome do Pai</string>
    <string name="name_mother">Nome da Mãe</string>
    <string name="bith_day">Data de nascimento</string>
    <string name="classroom">Turma</string>
    <string name="contact">Contato</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="notary_office">Cartorio</string>
    <string name="book">Livro</string>
    <string name="number">Numero</string>
    <string name="phone">Telefone</string>
    <string name="neighborhood">Bairro</string>
    <string name="street">Rua</string>
    <string name="delete_record">Deletar Ficha</string>
    <string name="archive_record">Arquivar Ficha</string>
    <string name="cpf_father">CPF do Pai</string>
    <string name="rg_father">RG do Pai</string>
    <string name="cpf_mother">CPF da Mãe</string>
    <string name="rg_mother">RG da Mãe</string>
    <string name="add_record">Adicionar Ficha</string>
    <string name="add_classroom">Adicionar Turma</string>
    <string name="docs">Documentos</string>
    <string name="name_class">Nome da Classe</string>

</resources>
